Stop using literate programming style